# tiem-ve-climbing-rose-ai

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/api/: chat.py
app/configs/: model_config.py
app/constants/: define_order.py
app/database/: __init__.py  base.py  init_db.py  output.json
app/models/: extract_param.py  state.py
app/prompts/: base_prompt.py
app/services/: chat_service.py  pinecone_service.py
app/services/climbing_crawler/: scrapy.cfg
app/services/climbing_crawler/climbing_crawler/: items.py  middlewares.py  pipelines.py  settings.py
app/services/climbing_crawler/climbing_crawler/spiders/: crawler.py
app/workflow/nodes/: route_node.py  work_flow.py
app/workflow/tools/: chat_tools.py
