[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.115.8"
uvicorn = "0.34.0"
py-eureka-client = "0.11.13"
python-dotenv = "1.0.1"
langchain-core = "0.3.60"
langgraph = "0.2.70"
langchain-mistralai = "0.2.6"
langchain-openai = "0.3.4"
langchainhub = "0.1.21"
langchain-community = "0.3.17"
langchain = "0.3.18"
psycopg2-binary = "2.9.10"
langchain-google-genai = "2.1.4"
jinja2 = "3.1.6"
langgraph-checkpoint-redis = "0.0.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
